--- a/package.json
+++ b/package.json
@@ -1,29 +1,43 @@
 {
-    "name": "ssb-storybook",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "storybook": "start-storybook -p 9001 -c .storybook",
-        "build-storybook": "build-storybook"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@storybook/addon-knobs": "^3.4.6",
-        "@storybook/addon-options": "^3.4.6",
-        "@storybook/react": "^3.4.6",
-        "babel-core": "^6.26.3",
-        "css-loader": "^0.28.11",
-        "node-sass": "^4.9.0",
-        "prop-types": "^15.6.1",
-        "sass-loader": "^7.0.1",
-        "storybook-readme": "^3.3.0",
-        "style-loader": "^0.21.0"
-    },
-    "dependencies": {
-        "react": "^16.4.0",
-        "react-dom": "^16.4.0"
-    }
+  "name": "tropical-components-react",
+  "version": "1.0.0",
+  "description": "SSB Tropical Components in React",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "build-storybook": "build-storybook",
+    "prepublish": "rm -rf ./dist && npm run build",
+    "build": "webpack"
+  },
+  "author": "ssb",
+  "license": "ISC",
+  "release": {
+    "branch": "master"
+  },
+  "peerDependencies": {
+    "tropical-components": "^1.0.0"
+  },
+  "devDependencies": {
+    "@storybook/addon-knobs": "^3.4.6",
+    "@storybook/addon-options": "^3.4.6",
+    "@storybook/react": "^3.4.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "node-sass": "^4.9.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "sass-loader": "^7.0.3",
+    "storybook-readme": "^3.3.0",
+    "style-loader": "^0.21.0",
+    "tropical-components": "^1.0.0",
+    "webpack": "^4.11.0",
+    "webpack-cli": "^3.0.2"
+  },
+  "dependencies": {}
 }
