--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "style-loader": "^0.21.0",
     "tropical-components": "^1.0.0",
     "webpack": "^4.11.0",
-    "webpack-cli": "^3.0.2"
+    "webpack-cli": "^3.0.2",
+    "winterfell": "^1.1.4"
   },
   "dependencies": {}
 }
