--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "tropical-components-react",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "SSB Tropical Components in React",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 0",
         "storybook": "start-storybook -p 9001 -c .storybook",
-        "build-storybook": "build-storybook",
+        "remove-winterfell": "rm -rf ./node_modules/winterfell/node_modules/react && rm -rf ./node_modules/winterfell/node_modules/react-dom",
+        "build-storybook": "remove-winterfell && build-storybook",
         "prepublish": "rm -rf ./dist && npm run build",
         "build": "webpack"
     },
